tests/ui/cfg/diagnostics-reexport.stderr
error[E0432]: unresolved import `a::x`
  --> $DIR/diagnostics-reexport.rs:12:9
   |
LL | pub use a::x;
   |         ^^^^ no `x` in `a`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-reexport.rs:18:12
   |
LL |     pub fn x() {}
   |            ^

error[E0432]: unresolved imports `b::x`, `b::y`
  --> $DIR/diagnostics-reexport.rs:22:13
   |
LL | pub use b::{x, y};
   |             ^  ^ no `y` in `b`
   |             |
   |             no `x` in `b`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-reexport.rs:29:12
   |
LL |     pub fn x() {}
   |            ^
note: found an item that was configured out
  --> $DIR/diagnostics-reexport.rs:32:12
   |
LL |     pub fn y() {}
   |            ^

error[E0425]: cannot find function `uwu` in module `inner`
  --> $DIR/diagnostics-reexport.rs:38:12
   |
LL |     inner::uwu();
   |            ^^^ not found in `inner`
   |
note: found an item that was configured out
  --> $DIR/diagnostics-reexport.rs:8:20
   |
LL |     pub use super::uwu;
   |                    ^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
